# allo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  compose.yml  index.html  index.scss  package.json  tailwind.config.js
.github/workflows/: deploy.yml  pr_check.yml
src/: app.rs  lib.rs  main.rs  my_utils.rs  routes.rs  settings.rs  static_data.rs
src/app/: components.rs  content.rs  models.rs  page.rs  states.rs
src/app/components/: balloon.rs  bbs_modals.rs  bulletin_board_system.rs  chat_text_field.rs  easter_egg_modals.rs  enter_button.rs  entrance_back_button.rs  first_visit_modals.rs  header.rs  input_user_name.rs  modals.rs  myself.rs  other_character.rs  product.rs  product_list.rs  stage.rs
src/app/page/: entrance.rs  home.rs
